--- a/index.html
+++ b/index.html
@@ -10,18 +10,13 @@
 	<div class="game-wrapper">
 		<h1>Pong</h1>
 		<div id="game"></div>
-		<!-- Rough-out your SVG mark-up here to start... -->
-		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="512" height="256" fill="#353535" viewBox="0 0 512 256">
+		<!--<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="512" height="256" fill="#353535" viewBox="0 0 512 256">
 			<rect width="512" height="256" />
 			<rect x="500" y="110" fill="white" width="8" height="56" />
 			<rect x="4px" y="110px" fill="white" width="8px" height="56px" />
 			<circle cx="256px" cy="128px" fill="white" r="8px" />
 			<line x1="256" x2="255" y1="256" y2="0" stroke-dasharray="15, 15" fill="white" stroke-width="4" stroke="white" width="50px" height="256px" />
-
-
-
-
-		</svg>
+		</svg>-->
 	</div>
 	<script type="text/javascript" src="build/bundle.js"></script>
 </body>
